Fix footer box shadow and border to align with rest of design

--- a/src/styles/views/app/_app.css
+++ b/src/styles/views/app/_app.css
@@ -102,7 +102,7 @@ body {
   justify-content: center;
   font-weight: 400;
   background: var(--sub-panel-c);
-  box-shadow: 0 -7px 10px 3px black;
+  box-shadow: 0 -10px 7px -1px hsla(0, 0%, 0%, 0.4);
   /* background: linear-gradient(
     to bottom,
     var(--body-bg-c) 0%,
@@ -111,7 +111,7 @@ body {
 }
 .app-footer::before {
   top: 0; left: 0; right: 0;
-  height: 7px;
+  height: 3px;
   content: '';
   background: var(--panel-c);
   border-bottom: 1px solid black;
